--- a/example/index.html
+++ b/example/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>twidget 测试页面</title>
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	<script type="text/javascript" src="../src/base.js"></script>
 	<script type="text/javascript" src="../src/lib/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="../src/record.widget.util.js"></script>
+	<script type="text/javascript" src="../src/record.event.js"></script>
 	<script type="text/javascript" src="../src/record.dropMenu.js"></script>
 	<script type="text/javascript">
 		$(function(){
@@ -14,9 +17,13 @@
 				model: [
 					{value: '1', text: 'option1'},
 					{value: '2', text: 'option2'},
-					{value: '3', text: 'option3'}
+					{value: '3', text: 'option3adfa'}
 				]
 			}).render();
+
+			menu.bind('change', function(){
+				
+			});
 		})
 	</script>
 </head>
