--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,10 @@
 	<meta charset="utf-8" />
 	<title>twidget 测试页面</title>
 	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	<style type="text/css">
+		#add-option-mod{display: inline-block;}
+	</style>
+
 	<script type="text/javascript" src="../src/base.js"></script>
 	<script type="text/javascript" src="../src/lib/jquery-1.7.2.min.js"></script>
 	<script type="text/javascript" src="../src/record.widget.util.js"></script>
@@ -10,7 +14,7 @@
 	<script type="text/javascript" src="../src/record.dropMenu.js"></script>
 	<script type="text/javascript">
 		$(function(){
-			var menu = new Record.DropMenu({
+			menu = new Record.DropMenu({
 				trigger: '#dropmenu-1',
 				name: 'menu-1',
 				value: 'option1',
@@ -21,13 +25,31 @@
 				]
 			}).render();
 
-			menu.bind('change', function(){
-				
+			menu.bind('change', function(value, text){
+				alert('value:' + value + '; text:' + text)
 			});
+
+			$('.js-add-option-btn').bind('click', function(){
+				var $this = $(this);
+				var value = $this.siblings('#added-value').val();
+				var text = $this.siblings('#added-text').val();
+				if(value && text){
+					menu.addOption({value: value, text: text});
+				}else if(!value){
+					alert('请填写value');
+				}else if(!text){
+					alert('请填写text');
+				}
+			})
 		})
 	</script>
 </head>
 <body>
 	<a href="javascript:;" id="dropmenu-1">option1</a>
+	<div id="add-option-mod">
+		<label for="added-value"></label><input type="text" id="added-value" name="added-value"/>
+		<label for="added-text"></label><input type="text" id="added-text" name="added-text"/>
+		<a href="javascript:;" class="js-add-option-btn">增加选项</a>
+	</div>
 </body>
 </html>
