当removeOption删除当前选项时特殊处理
另外，record.widget.util增加数据类型判断功能函数

--- a/example/index.html
+++ b/example/index.html
@@ -21,12 +21,12 @@
 				model: [
 					{value: '1', text: 'option1'},
 					{value: '2', text: 'option2'},
-					{value: '3', text: 'option3adfa'}
+					{value: '3', text: 'option3', selected: true}
 				]
 			}).render();
 
 			menu.bind('change', function(value, text){
-				alert('value:' + value + '; text:' + text)
+				//alert('value:' + value + '; text:' + text)
 			});
 
 			$('.js-add-option-btn').bind('click', function(){
