autocomplete组件增加template自定义配置选项，用户可自定义下拉菜单的html结构

--- a/example/autocomplete_test.html
+++ b/example/autocomplete_test.html
@@ -9,6 +9,7 @@
 
 	<script type="text/javascript" src="../src/base.js"></script>
 	<script type="text/javascript" src="../src/lib/jquery-1.7.2.min.js"></script>
+	<script type="text/javascript" src="../src/lib/jquery.jqote2.js"></script>
 	<script type="text/javascript" src="../src/record.widget.util.js"></script>
 	<script type="text/javascript" src="../src/record.event.js"></script>
 	<script type="text/javascript" src="../src/record.datasource.js"></script>
@@ -20,6 +21,7 @@
 
 			var autocomplete = new Record.AutoComplete({
 				trigger: '#input',
+				classPrefix: 'w-dropdown',
 				model: function(value){
 					var result = [];
 					for(var i = 0, len = signatories.length; i < len; i++){
